<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/farm" >

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#CCFFFFFF"
        android:orientation="vertical"
        android:padding="20dp"
        android:gravity="center"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true">

        <EditText
            android:id="@+id/editEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:inputType="textEmailAddress"
            android:hint="@string/email_address" />

        <EditText
            android:id="@+id/editPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:inputType="textPassword"
            android:hint="@string/password" />

        <com.dd.processbutton.iml.ActionProcessButton
            android:id="@+id/btnSignIn"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginBottom="10dp"
            android:text="@string/log_in"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            custom:pb_colorComplete="@color/green_complete"
            custom:pb_colorNormal="@color/main_colour"
            custom:pb_colorPressed="@color/main_colour_pressed"
            custom:pb_colorProgress="@color/purple_progress"
            custom:pb_textComplete="@string/success"
            custom:pb_textProgress="@string/loading" />

    </LinearLayout>

</RelativeLayout>
